[project]
name = "nether"
description = "The foundation library"
dynamic = ["readme", "version"]
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = ["aiohttp", "aiohttp-middlewares", "python-dotenv", "asyncpg"]

[project.optional-dependencies]
windows = ["pywin32"]
access = [
    "nether-access @ git+ssh://git@github.com/arjuna-group/nether.git#subdirectory=extensions/nether-access",
]

[tool.setuptools.dynamic]
readme = { file = ["README.md"] }
version = { attr = "nether.__version__" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["nether"]

[tool.ruff]
extend-include = ["*.ipynb"]
line-length = 120
target-version = "py312"
indent-width = 2
exclude = [
    "extensions",
    "docs",
    ".eggs",
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "__pypackages__",
    "_build",
    "build",
    "dist",
    "venv",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle - Error
    "W",   # pycodestyle - Warning
    "F",   # PyFlakes
    "C4",  # flake8 - Comprehensions
    "B",   # flake8 - Bugbear
    "I",   # Import sort
    "N",   # pep8 - Naming
    "PTH", # use pathlib
    "UP",  # PyUpgrade (new syntax)
]
ignore = []
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
files = ["src", "examples/server-simple.py"]
ignore_missing_imports = true
show_error_codes = true
warn_unused_ignores = true
warn_unused_configs = true
show_column_numbers = true
check_untyped_defs = true
exclude = ['venv', '.venv']
