[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nether-system"
version = "0.1.0"
description = "Module system using Nether framework"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "psutil", "schedule", # process module
    "nether @ git+https://github.com/ariuna-systems/nether.git",
]
[project.scripts]
nether-system = "nether_system.__init__:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["nether_system*"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
