[project]
name = "nether-access"
description = "Nether Access Module"
version = "0.1.0"                                               # Verzuj hlavní Nether balík
dynamic = ["readme"]
requires-python = ">=3.12"
dependencies = ["psycopg", "pyjwt[crypto]", "pyotp", "aiohttp"]

[tool.setuptools.package-data]
"nether.access" = ["py.typed"]
"nether.account" = ["py.typed"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["nether.*"]

[tool.setuptools.dynamic]
readme = { file = ["README.md"] }

[tool.ruff]
extend-include = ["*.ipynb"]
line-length = 120
target-version = "py312"
indent-width = 2
exclude = [
  "docs",
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".git-rewrite",
  ".hg",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "venv",
]

[tool.pytest.ini_options]
markers = ["asyncio"]

[tool.mypy]
files = ["src"]
ignore_missing_imports = true
show_error_codes = true
warn_unused_ignores = true
warn_unused_configs = true
namespace_packages = true
explicit_package_bases = true
show_column_numbers = true
exclude = ['venv', '.venv']
