[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nether-module-settings"
version = "1.0.0"
description = "Independent settings module for Nether applications with modern frontend"
authors = [
    {name = "Nether Team", email = "team@nether.dev"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.8.0",
    "nether-framework>=1.0.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: AsyncIO",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

[project.urls]
Homepage = "https://github.com/nether-framework/nether-module-settings"
Repository = "https://github.com/nether-framework/nether-module-settings"
Documentation = "https://docs.nether.dev/modules/settings"

[tool.setuptools.packages.find]
where = ["python_module"]

[tool.setuptools.package-data]
"*" = ["static/*", "static/**/*"]
